# srs

./: .gitignore  .gitmodules  README.md  bootstrap.toml  build-sld.sh  cargo-srs.sh  install.sh  with-sld.sh
.github/workflows/: ci.yml
benches/benchsuite/: Cargo.toml
ci/: generate.py
crates/build-rs-test-lib/: Cargo.toml
crates/home/: README.md
crates/home/src/: env.rs
crates/resolver-tests/: Cargo.toml
rust/: .gitmodules
rust/src/tools/cargo/.github/workflows/: audit.yml
rust/src/tools/cargo/crates/build-rs/: Cargo.toml
rust/src/tools/cargo/crates/cargo-test-support/: Cargo.toml
rust/src/tools/cargo/crates/crates-io/: Cargo.toml  lib.rs
rust/src/tools/cargo/crates/home/: Cargo.toml
rust/src/tools/cargo/crates/home/src/: lib.rs
rust/src/tools/cargo/crates/rustfix/: Cargo.toml
rust/src/tools/cargo/crates/xtask-spellcheck/: Cargo.toml
rust/src/tools/cargo/src/cargo/core/compiler/: build_config.rs  mod.rs
rust/src/tools/cargo/src/cargo/core/compiler/job_queue/: mod.rs
rust/src/tools/cargo/src/cargo/util/context/: mod.rs  schema.rs
rust/src/tools/cargo/src/doc/src/reference/: config.md  unstable.md
rust/src/tools/cargo/tests/testsuite/: config_include.rs
scripts/: build-apple-containers.sh
src/cargo/core/: features.rs
src/cargo/ops/registry/: mod.rs  publish.rs
src/cargo/sources/git/: utils.rs
src/cargo/util/network/: http_async.rs
src/doc/src/reference/: lints.md
tests/testsuite/: artifact_dep.rs  build_dir.rs  cargo_env_config.rs  fetch.rs  help.rs  offline.rs  publish.rs  registry.rs
