[package]
name = "home"
version = "0.5.13"
authors = ["Brian Anderson <andersrb@gmail.com>"]
rust-version.workspace = true
documentation = "https://docs.rs/home"
edition.workspace = true
include = [
    "/src",
    "/Cargo.toml",
    "/CHANGELOG",
    "/LICENSE-*",
    "/README.md",
]
license.workspace = true
repository.workspace = true
description = "Shared definitions of home directories."

[lints]
workspace = true
